--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# MacOS
+.DS_Store
+
 # Output files
 output
